distro/firewall
#
# Copyright (c) 2010 rPath, Inc.
#
# All rights reserved.
#

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

## INPUT rules
# Allow loopback
-A INPUT -i lo -j ACCEPT
# Allow already-established connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
# Allow ICMP
-A INPUT -p icmp -j ACCEPT
# Allow SSH
-A INPUT -m tcp -p tcp --dport 22 -j ACCEPT
# Allow HTTP/S
-A INPUT -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m tcp -p tcp --dport 443 -j ACCEPT
# Allow rPA (HTTPS only)
-A INPUT -m tcp -p tcp --dport 8003 -j ACCEPT
# rPath repeater (inbound system registration)
-A INPUT -m tcp -p tcp --dport 8443 -j ACCEPT

# Reject anything that hasn't been allowed yet.
-A INPUT -m tcp -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-host-prohibited


COMMIT
