distro/firewall6
## Base firewall configuration (IPv6)
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:FROM-SLAVE - [0:0]

## INPUT rules
# Allow loopback
-A INPUT -i lo -j ACCEPT
# Allow already-established connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
# Allow ICMP
-A INPUT -p icmpv6 -j ACCEPT
# Allow SSH
-A INPUT -m tcp -p tcp --dport 22 -j ACCEPT
# HTTP/S for management nodes/repeater
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8443 -j ACCEPT
# HTTP/S for rAPA
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8003 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8004 -j ACCEPT
# Reject anything that hasn't been allowed yet
-A INPUT -j REJECT --reject-with adm-prohibited

cOMMIT
